@@ -1,5 +1,6 @@
 #VERSION 0.9.2#
  
+ - added Zend_Db_Profiler infos if enabled to Peak_View_Helper_debugbar
  - modified class Peak_View_Helper_debugbar and moved js and css to debugbar folder
  - updated vendor zend to version 1.11.11
  - added twitter bootstrap to vendors 
